--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,33 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+    apply plugin: 'com.android.application'
+    apply plugin: 'kotlin-android'
+    apply plugin: 'kotlin-android-extensions'
 
-android {
-    compileSdkVersion 30
-    buildToolsVersion '29.0.3'
+    android {
+        compileSdkVersion 31
+        buildToolsVersion '30.0.3'
 
-    defaultConfig {
-        applicationId "com.hfad.stopwatch"
-        minSdkVersion 26
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        defaultConfig {
+            applicationId "com.hfad.stopwatch"
+            minSdkVersion 26
+            targetSdkVersion 31
+            versionCode 1
+            versionName "1.0"
+        }
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            }
         }
     }
-}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.20"
+    implementation  'androidx.appcompat:appcompat:1.4.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.30"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2-native-mt'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
 }
 repositories {
     mavenCentral()
